# aoc-2018-cpp

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.md  generate_day.cmake  tests.cmake
src/: DaySolver.h  main.cpp  utils.h
src/cli/: ArgsParser.h  Result.h  Utils.h
src/problems/: day1.cpp  day1.h  day10.cpp  day10.h  day11.cpp  day11.h  day12.cpp  day12.h  day13.cpp  day13.h  day14.cpp  day14.h  day15.cpp  day15.h  day16.cpp  day16.h  day17.cpp  day17.h  day18.cpp  day18.h  day19.cpp  day19.h  day2.cpp  day2.h  day20.cpp  day20.h  day21.cpp  day21.h  day22.cpp  day22.h  day23.cpp  day23.h  day24.cpp  day24.h  day25.cpp  day25.h  day3.cpp  day3.h  day4.cpp  day4.h  (+10 more)
templates/: SolverFactory.h.in  day_template.cpp.in  day_template.h.in  inputs.h.in
tests/: solution_check.cpp
